Fixed spacing bug with anchor tags that are styled using the .btn class

--- a/css/espresso.css
+++ b/css/espresso.css
@@ -51,6 +51,10 @@ body{
 	color: #222;
 }
 
+a.btn {
+	padding-top: 0.9rem;
+}
+
 
 /**************************************************
                     Typography 
